Asp.Net Core 6 MVC (Page Edit)

--- a/CleanBlog/appsettings.json
+++ b/CleanBlog/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-BM243UP;Database=CleanBlog;Trusted_Connection=true"
+    "DefaultConnection": "Server=DESKTOP-BM243UP;Database=CleanBlogDB;Trusted_Connection=true"
   }
 }
